# antsilk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  site-deploy.yml  test.yml
docs/: configuration.md  index.md  mkdocs.yml  per-route-overrides.md  quickstart.md  rules.md
examples/: fastapi_demo.py
site/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
site/scripts/: build_stats.py
site/src/: App.tsx  index.css
site/src/components/: AttackCounter.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Install.tsx
site/src/data/: attack_stats.json
src/antsilk/: __init__.py  config.py  events.py  exceptions.py  middleware.py
src/antsilk/rules/: headers.py  patterns.py  rate_limit.py  threat_intel.py
src/antsilk/sinks/: __init__.py  base.py  jsonlines.py  remote.py  sqlite.py
tests/: conftest.py  test_config.py  test_headers.py  test_middleware.py  test_patterns.py  test_public_api.py  test_rate_limit.py  test_sinks.py  test_threat_intel.py
